--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React Boilerplate</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="/dist/bundle.min.js"></script>
+    <script src="/dist/bundle.min.js" charset="utf-8"></script>
   </body>
 </html>
